syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.springexample.cloudeservice";
option java_outer_classname = "AuthProto";


service AuthService {
  rpc GetRegistre(RequestRegistre) returns (RegisterResponse){}
  rpc GetLogin(RequestLogin) returns (LoginResponse){}
}


message RequestRegistre {
  string login = 1;
  string password = 2;
}

message RequestLogin {
  string login = 1;
  string password = 2;
}

message RegisterResponse{
  bool success=1;
  string message=2;
}

message LoginResponse{
  string token=1;
}